--- a/TORERU/TORERU/Base.lproj/Main.storyboard
+++ b/TORERU/TORERU/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="ipad9_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -27,10 +27,27 @@
                                 <color key="textColor" red="0.35648256395864519" green="0.53148555976351886" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vd2-DB-oPo">
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                                <connections>
+                                    <action selector="moveSeque:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dT0-eH-kPQ"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="画面をタッチしてください" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zai-Be-qAH">
+                                <rect key="frame" x="179" y="658" width="411" height="114"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="33"/>
+                                <color key="textColor" red="1" green="0.59959035685061479" blue="0.12378881782608975" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="vd2-DB-oPo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="7QX-RL-N7G"/>
                             <constraint firstItem="Rq6-ue-Qao" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="AZg-cL-Kcp"/>
+                            <constraint firstItem="vd2-DB-oPo" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="GLM-Zn-G7a"/>
+                            <constraint firstItem="vd2-DB-oPo" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="L1t-iX-eRB"/>
+                            <constraint firstItem="vd2-DB-oPo" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="UJM-Iw-x6O"/>
                             <constraint firstItem="YML-Q9-4lr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="e1f-mf-NfJ"/>
                             <constraint firstItem="Rq6-ue-Qao" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lGX-u8-cC6"/>
                             <constraint firstItem="YML-Q9-4lr" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="riF-Fd-LnJ"/>
