--- a/TORERU/TORERU/Scan.storyboard
+++ b/TORERU/TORERU/Scan.storyboard
@@ -67,16 +67,17 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XG2-4h-i9g">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XG2-4h-i9g">
                                 <rect key="frame" x="330" y="794" width="109" height="66"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                 <state key="normal" title="確定!!"/>
+                                <connections>
+                                    <action selector="moveSeque:" destination="wzc-tP-yEG" eventType="touchUpInside" id="pym-Vn-WMu"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="XG2-4h-i9g" firstAttribute="centerX" secondItem="wOz-dO-dQ0" secondAttribute="centerX" id="h6s-6Q-au0"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="NFm-0e-tnY"/>
                     </view>
                 </viewController>
