--- a/TORERU/TORERU/SubjectList.storyboard
+++ b/TORERU/TORERU/SubjectList.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -27,7 +26,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="DvI-3O-Nln">
-                                <rect key="frame" x="59" y="99" width="650" height="890"/>
+                                <rect key="frame" x="59" y="99" width="650" height="809"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2TL-Yf-tVO">
@@ -44,23 +43,27 @@
                                             <rect key="frame" x="0.0" y="0.0" width="90" height="143"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="os" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Gj-it-WWk">
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Gj-it-WWk">
                                                     <rect key="frame" x="10" y="10" width="95" height="64"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </view>
-                                        <constraints>
-                                            <constraint firstItem="5Gj-it-WWk" firstAttribute="leading" secondItem="7gM-zM-hLR" secondAttribute="leadingMargin" constant="-6" id="1CI-sH-WqA"/>
-                                            <constraint firstAttribute="trailingMargin" secondItem="5Gj-it-WWk" secondAttribute="trailing" constant="4" id="hmP-9X-XFn"/>
-                                            <constraint firstItem="5Gj-it-WWk" firstAttribute="centerY" secondItem="7gM-zM-hLR" secondAttribute="centerY" id="mJ1-PZ-L0u"/>
-                                            <constraint firstItem="5Gj-it-WWk" firstAttribute="top" secondItem="7gM-zM-hLR" secondAttribute="topMargin" constant="-10" id="uJ6-t0-lsD"/>
-                                        </constraints>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="100-XB-C3w">
+                                <rect key="frame" x="287" y="916" width="195" height="88"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="ホーム画面へ"/>
+                                <connections>
+                                    <action selector="moveHome:" destination="bSl-c4-vtm" eventType="touchUpInside" id="EyR-1W-hqJ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="XqR-qj-IrO"/>
