--- a/TORERU/TORERU/Scan.storyboard
+++ b/TORERU/TORERU/Scan.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wzc-tP-yEG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wzc-tP-yEG">
     <device id="ipad9_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -67,21 +67,26 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XG2-4h-i9g">
-                                <rect key="frame" x="330" y="794" width="109" height="66"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XG2-4h-i9g">
+                                <rect key="frame" x="331" y="761" width="108" height="63"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                 <state key="normal" title="確定!!"/>
+                                <connections>
+                                    <action selector="pushButton:" destination="wzc-tP-yEG" eventType="touchUpInside" id="TVd-Dj-60N"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="XG2-4h-i9g" firstAttribute="centerX" secondItem="wOz-dO-dQ0" secondAttribute="centerX" id="h6s-6Q-au0"/>
+                            <constraint firstItem="XG2-4h-i9g" firstAttribute="centerX" secondItem="wOz-dO-dQ0" secondAttribute="centerX" constant="1" id="Nt8-N2-vgh"/>
+                            <constraint firstItem="NFm-0e-tnY" firstAttribute="bottom" secondItem="XG2-4h-i9g" secondAttribute="bottom" constant="200" id="RDl-L1-M0q"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="NFm-0e-tnY"/>
                     </view>
                     <connections>
                         <outlet property="DayScrollbar" destination="06O-H0-4tV" id="aTi-Pl-PSd"/>
                         <outlet property="TimeScrollbar" destination="vAe-QH-ZrR" id="HDr-1p-k60"/>
+                        <outlet property="subjectName" destination="agO-p3-V4s" id="qnX-xi-LNy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u4C-bO-iDY" userLabel="First Responder" sceneMemberID="firstResponder"/>
