--- a/TORERU/TORERU/SubjectList.storyboard
+++ b/TORERU/TORERU/SubjectList.storyboard
@@ -13,14 +13,14 @@
         <!--View Controller List-->
         <scene sceneID="DBI-Al-IxE">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9f4-27-Dl4" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="bSl-c4-vtm" customClass="ViewControllerList" customModule="TORERU" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7iL-wj-7wx">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="授業表" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FTT-Ga-8nf">
-                                <rect key="frame" x="323" y="29" width="123" height="52"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="授業表" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FTT-Ga-8nf">
+                                <rect key="frame" x="330" y="30" width="109" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -60,15 +60,28 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jwz-Te-yro">
+                                <rect key="frame" x="595" y="20" width="114" height="60"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="loadButton:" destination="bSl-c4-vtm" eventType="touchUpInside" id="sKu-b6-NzL"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="FTT-Ga-8nf" firstAttribute="centerX" secondItem="7iL-wj-7wx" secondAttribute="centerX" id="Fg6-rY-Jro"/>
+                            <constraint firstItem="XqR-qj-IrO" firstAttribute="trailing" secondItem="Jwz-Te-yro" secondAttribute="trailing" constant="59" id="HNs-5n-G3Y"/>
+                            <constraint firstItem="Jwz-Te-yro" firstAttribute="top" secondItem="XqR-qj-IrO" secondAttribute="top" id="Pd0-Fc-kfk"/>
+                            <constraint firstItem="FTT-Ga-8nf" firstAttribute="top" secondItem="XqR-qj-IrO" secondAttribute="top" constant="10" id="lpC-yn-boD"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="XqR-qj-IrO"/>
                     </view>
                     <connections>
                         <outlet property="listview" destination="DvI-3O-Nln" id="OhY-iZ-4xZ"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9f4-27-Dl4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-364.0625" y="75"/>
         </scene>
